# ChatGPT-Line-Bot

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/: chatgpt.py  models.py  prompt.py  stock.py
